# meshic_final

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
Meshic_Final/: TODO.md
Meshic_Final/memory-bank/: activeContext.md  ingestion_bottleneck_report.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
Reference_docs/: ingestion_task_list.md  meshic_final_schema.sql
Reference_docs/Schema/: schema_report.md
alembic/: env.py
alembic/versions/: 0b9fc0beb271_refactor_arabic_name_columns_to__ar__en_.py  355268b67c18_make_all_non_primary_key_columns_.py  52df8e311581_initial_schema_exclude_postgis_system_.py  expand_alembic_version_num_length.py  f09fb53ba77b_add_slug_column_to_regions_table.py  f58029841780_add_centroid_and_bounding_box_columns_.py  merge_heads_f09fb53ba77b_and_upgrade_parcels_raw_geometry_to_3857.py  upgrade_parcels_raw_geometry_to_3857.py
configs/: config.yaml
data_raw/tile_cache/15/20632/: 14056.pbf  14057.pbf  14058.pbf
data_raw/validation_reports/: Z15_tiles.json
src/: __init__.py  cli.py
src/scraper/: cli.py
src/scraper/db/: engine.py  ingest_regions_provinces.py  models.py  summarize_tile_state.py
src/scraper/pipelines/: discovery.py  ingestion.py  orchestrator.py  tile_discovery_hybrid.py
src/scraper/utils/: config.py  downloader.py  logging.py
tests/: test_db_nullability.py
tests/discovery/: test_discovery.py
tests/fixtures/: riyadh_15_20633_14065.pbf  riyadh_15_20636_14069.pbf
tests/ingestion/: test_downloader.py  test_downloader_real.py  test_ingestion.py
