[project]
name = "meshic-final"
version = "0.1.0"
description = ""
authors = [
    {name = "Raedmund",email = "30367709+Pinstack@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.3,<2.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "mapbox-vector-tile (>=2.2.0,<3.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "geoalchemy2 (>=0.17.1,<0.18.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "PyYAML (>=6.0.2,<7.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
respx = "^0.22.0"
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.12.2"
mypy = "^1.16.1"
python-dotenv = "^1.1.1"
types-pyyaml = "^6.0.12.20250516"
vulture = "^2.14"

